--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       content="Welcome to the most extraordinary hotel in Boston Massachusetts"
     />
     <meta name="keywords" content="hotel,boston hotel,new england hotel" />
+    <script
+      src="https://kit.fontawesome.com/d12a5234ba.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Hotel BT | Welcome</title>
   </head>
@@ -38,5 +42,49 @@
         </div>
       </div>
     </header>
+
+    <section id="home-info" class="bg_dark">
+      <div class="info-img"></div>
+      <div class="info-content">
+        <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
+          blanditiis voluptate exercitationem temporibus voluptas doloribus
+          labore ratione eum, iste dolorem a illo, fugit odio perferendis? Ipsam
+          deleniti magnam impedit ius.
+        </p>
+        <a href="about.html" class="btn btn_light">Read More</a>
+      </div>
+    </section>
+    <section id="features">
+      <div class="box bg_light">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          expedita minima consequuntur
+        </p>
+      </div>
+      <div class="box bg_primary">
+        <i class="fas fa-utensils fa-3x"></i>
+        <h3>Free Meals</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          expedita minima consequuntur
+        </p>
+      </div>
+      <div class="box bg_light">
+        <i class="fas fa-dumbbell fa-3x"></i>
+        <h3>Fitness Room</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          expedita minima consequuntur
+        </p>
+      </div>
+    </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+      <p>Hotel BT &copy; 2020, All Rights Reserved</p>
+    </footer>
   </body>
 </html>
